static/css/Styling.css
/* ... */
.w3-border-pink,.w3-hover-border-pink:hover{
    border-color:#e91e63!important
}
.w3-border-purple,.w3-hover-border-purple:hover{
    border-color:#9c27b0!important
}
.w3-border-deep-purple,.w3-hover-border-deep-purple:hover{
    border-color:#673ab7!important
}
.w3-border-red,.w3-hover-border-red:hover{
    border-color:#f44336!important
}
.w3-border-sand,.w3-hover-border-sand:hover{
    border-color:#fdf5e6!important
}
.w3-border-teal,.w3-hover-border-teal:hover{
    border-color:#009688!important
}
.w3-border-yellow,.w3-hover-border-yellow:hover{
    border-color:#ffeb3b!important
}
.w3-border-white,.w3-hover-border-white:hover{
    border-color:#fff!important
}
.w3-border-black,.w3-hover-border-black:hover{
    border-color:#000!important
}
.w3-border-grey,.w3-hover-border-grey:hover,.w3-border-gray,.w3-hover-border-gray:hover{
    border-color:#9e9e9e!important
}
.w3-border-light-grey,.w3-hover-border-light-grey:hover,.w3-border-light-gray,.w3-hover-border-light-gray:hover{
    border-color:#f1f1f1!important
}
.w3-border-dark-grey,.w3-hover-border-dark-grey:hover,.w3-border-dark-gray,.w3-hover-border-dark-gray:hover{
    border-color:#616161!important
}
.w3-border-pale-red,.w3-hover-border-pale-red:hover{
    border-color:#ffe7e7!important
}
.w3-border-pale-green,.w3-hover-border-pale-green:hover{
    border-color:#e7ffe7!important
}
.w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{
    border-color:#ffffcc!important
}
.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{
    border-color:#e7ffff!important
}

.gold{
background-color: gold;
margin-left: auto;
margin-right: auto;
padding: 0 8px;
text-align: center;

}

.green{
background-color: green;
margin-left: auto;
margin-right: auto;
padding: 0 8px;
text-align: center;

}

.silver{
background-color: silver;
margin-left: auto;
margin-right: auto;
padding: 0 8px;
text-align: center;

}

